--- a/pages/progList/progList.wxml
+++ b/pages/progList/progList.wxml
@@ -11,7 +11,7 @@
     <block wx:for='{{goods}}' wx:key='{{index}}'>
       <view class='list' data-gid='{{item.goodsInfo.gid}}' data-type='{{item.goodsInfo.type}}' bindtap='goToThePoiDetail'>
         <view class='img_row'>
-          <image class='bg' src='{{item.goodsBase.poster}}'></image>
+          <image class='bg' src='{{item.goodsBase.poster + "?x-oss-process=image/resize,w_400"}}'></image>
           <image class='top' src='../../img/index/top.png' wx:if='{{item.goodsBase.top === 1}}'></image>
           <image class='ticket' src='../../img/index/ticket.png' wx:if='{{item.goodsBase.coupon === 1}}'></image>
         </view>
