--- a/pages/goodItemDetail/goodItemDetail.wxml
+++ b/pages/goodItemDetail/goodItemDetail.wxml
@@ -8,8 +8,8 @@
       <view class='title'>{{goodsItem.goodsItemInfo.name}}</view>
       <view class='subTitle'>{{goodsItem.goodsItemInfo.subInfo}}</view>
       <view class='price'>
-        <text>{{goodsItem.goodsItemBase.currency}}</text>
-        <text>{{ (goodsItem.goodsItemBase.amount ? goodsItem.goodsItemBase.amount : goodsItem.goodsItemBase.sourceAmount) / 100 }}</text>
+        <text>{{goodsItem.goodsItemBase.currency}}{{ (goodsItem.goodsItemBase.amount ? goodsItem.goodsItemBase.amount : goodsItem.goodsItemBase.sourceAmount) / 100 }}</text>
+        <text></text>
       </view>
     </view>
   </view>
@@ -65,7 +65,7 @@
     </block>
   </view>
   <view class='single'>
-    <view class='s_title'>确认时间</view>
+    <view class='s_title'>确认时间：</view>
     <view class='tips'>{{dateFr.getSureDateText(goodsItem.goodsItemBase.confirmType)}}</view>
   </view>
   <view class='single'>
@@ -74,12 +74,12 @@
   </view>
   <block wx:for='{{goodsItem.goodsItemDescs}}' wx:key='{{index}}'>
     <view class='single' wx:if='{{item.title || item.info}}'>
-      <view class='s_title'>{{item.title}}</view>
+      <view class='s_title'>{{item.title}}：</view>
       <view class='tips'>{{item.info}}</view>
     </view>
   </block>
   <view class='introduce' wx:if='{{goodsItem.goodsItemInfo.info}}'>
-    <view class='i_title'>介绍说明</view>
+    <view class='i_title'>产品介绍</view>
     <view class='i_content'>
       <template is="wxParse" data="{{wxParseData: article.nodes}}" />
     </view>
