--- a/utils/filter.wxs
+++ b/utils/filter.wxs
@@ -204,6 +204,8 @@ var DateFr = {
     if (type === 1) str = '支付宝';
     if (type === 2) str = '微信';
     if (type === 3) str = 'apple';
+    if (type === 4) str = '微信H5';
+    if (type === 5) str = '小程序'; 
     return str;
   },
   getLinePendingDateText: function (lineAt) {
